2015-03-15  Petasis George  <petasis@iit.demokritos.gr>
	TkDND 2.8 released.

2015-03-04  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd.tcl: Added support in <<DragInitCmd>> & <<DragEndCmd>>
	for %x, %y mouse coordinates (relative to window that is the drag
	source). Added the ability to stop a drag on the drag source. The
	<<DragInitCmd>> binding must return either "refuse_drop"
	as a value (instead of a list), or use
	"return -code break"|"return -code continue".

2015-02-20  Petasis George  <petasis@iit.demokritos.gr>
	* unix/TkDND_XDND.c: Fixed a bug in converting Time to a Tcl object.
	Now Tcl_NewWideIntObj() is used, as Tcl_NewLongObj() could cause an
	overflow under some operating systems. Bug reported by Nicolas Bats,
	for OS X 10.7.

2014-11-26  Petasis George  <petasis@iit.demokritos.gr>
	TkDND 2.7 released.

2014-10-07  Petasis George  <petasis@iit.demokritos.gr>
	* macosx/macdnd.m:
	* library/tkdnd_macosx.tcl: Added support for DND_HTML in OS X.

	* library/tkdnd_unix.tcl: Added support for DND_HTML in XDND.

2014-09-21  Petasis George  <petasis@iit.demokritos.gr>
	* library/tkdnd_macosx.tcl:
	* library/tkdnd_unix.tcl: Changed implementation to re-use the
	generic implementation.

	* library/tkdnd_generic.tcl: Two new procedures,
	generic::GetWindowCommonTypes and generic::FindWindowWithCommonTypes.
	The last one tries to find a window that can accept the current drag.

	* unix/TkDND_XDND.c: Fixed a bug in getting the "acccepted" field
	in XdndFinished.

	* demos/overlapping_targets.tcl: New demo (more a "testing" utility for
	mega-widget support).

	* CMakeLists.txt:
	* configure.in: Updated installed files.

	* demos/basic.tcl:
	* demos/dndSpy.tcl:
	* demos/simple_target.tcl: Bug fixes.

	* library/tkdnd.tcl:
	* library/tkdnd_macosx.tcl:
	* library/tkdnd_unix.tcl: Various bug fixes.

	* win/OleDND.h:
	* win/TkDND_OleDND.cpp:
	* library/tkdnd_windows.tcl: Changed implementation to re-use the
	generic implementation.
